packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/method_sig_not_match7.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "splitExternal" 13 0x00 ())
(( 1 0x00 ())
(handle 6 0x00 ())
(ident, "receiver" 8 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "delimeter" 9 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""split"" 7 0x00 ())
(, 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""java.lang.String"" 18 0x00 ())
(, 1 0x00 ())
(ident, "paramTypes" 10 0x00 ())
(: 1 0x00 ())
([ 1 0x00 ())
(string, ""java.lang.String"" 18 0x00 ())
(] 1 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
